Updated index.html with the new icon name

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="hsl(176, 100%, 94%)" media="(prefers-color-scheme: light)">
 	<meta name="theme-color" content="hsl(177, 39%, 46%)" media="(prefers-color-scheme: dark)">
-	<link rel="shortcut icon" type="image/x-icon" href="/logo.ico">
+	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   </head>
   <body>
     <div id="root"></div>
